# pace-2022

./: .gitignore  CMakeLists.txt  README.md  example_input.txt
FINDMINHS/src/: solve.rs
WGYC/report/: ltexpprt.sty  ltexpprt.tex
include/: CollectionOperators.h  Constants.h  Makros.h
include/CONTESTS/PACE22/: Config.h  Reducer.h  Utils.h
include/CONTESTS/PACE22/exact/: CliqueCoverLS.h  DFVSSolverE.h
include/CONTESTS/PACE22/heur/: AgentFlow.h  DFVSImprover.h  DFVSSolverH.h  HittingSetLS.h  SALS.h  SALS2.h  SALS3.h  SALS4.h  SALS5.h  VCImprover.h
include/combinatorics/: CombinatoricUtils.h
include/datastructures/: RandomSelectionSet.h
include/graphs/: GraphInducer.h  GraphReader.h  GraphUtils.h  GraphWriter.h
include/graphs/VertexCover/: VCUtils.h
include/graphs/VertexCover/kernelization/: KernelizerVC.h
include/graphs/cliques/: CliqueExtension.h  CliqueUtils.h
include/graphs/components/: ConnectedComponents.h
include/graphs/cycles/: CycleCounter.h
include/graphs/graphtraversals/: BFS.h
include/graphs/matching/: MaxMatchBipartite.h
include/graphs/scc/: StronglyConnectedComponents.h
include/graphs/toposort/: TopoSort.h
include/utils/: MemoryUtils.h  RandomNumberGenerators.h  StandardUtils.h  Stopwatch.h  TimeMeasurer.h
src/CONTESTS/PACE22/: Config.cpp  Pace22.cpp  Reducer.cpp  Utils.cpp
src/CONTESTS/PACE22/exact/: CliqueCoverLS.cpp  DFVSSolverE.cpp
src/CONTESTS/PACE22/heur/: AgentFlow.cpp  DFVSImprover.cpp  DFVSSolverH.cpp  HittingSetLS.cpp  SALS.cpp  SALS2.cpp  SALS3.cpp  SALS4.cpp  SALS5.cpp  VCImprover.cpp
src/combinatorics/: CombinatoricUtils.cpp
src/datastructures/: RandomSelectionSet.cpp
src/graphs/: GraphInducer.cpp  GraphReader.cpp  GraphUtils.cpp  GraphWriter.cpp
src/graphs/VertexCover/: VCUtils.cpp
src/graphs/VertexCover/kernelization/: KernelizerVC.cpp
src/graphs/cliques/: CliqueExtension.cpp  CliqueUtils.cpp
src/graphs/components/: ConnctedComponents.cpp
src/graphs/cycles/: CycleCounter.cpp
src/graphs/graphtraversals/: BFS.cpp
src/graphs/matching/: MaxMatchBipartite.cpp
src/graphs/scc/: StronglyConnectedComponents.cpp
src/graphs/toposort/: TopoSort.cpp
src/utils/: MemoryUtils.cpp  RandomNumberGenerators.cpp  StandardUtils.cpp  Stopwatch.cpp  TimeMeasurer.cpp
src/utils/unit_tests/: test_Stopwatch.cpp  test_WorkloadManager.cpp
(+6 files in other folders)
